2022-06-19  Ingo Schwarze <schwarze@openbsd.org>

	* font/devpdf/devpdf.am: Always build PDF font description files.

	Build font/devpdf/download and the various TR, TB, CR etc.
	files in the same directory even when they are not required
	by the build because USE_GROPDF is unset, usually because
	ghostscript is either unavailable or deliberately disabled
	by the person running the build.  These files need to be
	built and installed anyway, and can be used on the target
	sytem when the required infrastructure is available at run
	time.

2022-06-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Revise introduction of vertical spacing context to avoid
	render inference that the formatter will compute a vertical
	spacing appropriate to the type size automagically--it will not.

	Fixes <https://savannah.gnu.org/bugs/?62617>.  Thanks to Dave
	Kemper for the report.

2022-06-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	[docs]: Revise discussion of end-of-sentence detection.

	* doc/groff.texi (Filling):
	* man/roff.7.man (Concepts): Do it.  "Spaces" is a now a term
	with a much more restricted usage.  Emphasize the input context,
	now explicitly identified as plain text files with Unix line
	endings.

	Fixes (one hopes) <https://savannah.gnu.org/bugs/?62593>.
	Thanks to Ingo Schwarze for the report and Dave Kemper for the
	discussion.

2022-06-10  Deri James  <deri@chuzzlewit.myzen.co.uk>

	[gropdf]: Changes to BuildFoundries.

	* font/devpdf/util/BuildFoundries.pl: Collect search paths into
	an array rather than a colon delimited string, this allows
	the @PATH_SEPARATOR@ character (':' or ';') to be used to
	delimit paths yielded by the command 'gs -h' but still use ':'
	to delimit paths in the Foundry file. This means the same
	Foundry file can be used on all systems.

	* font/devpdf/Foundry.in: Add more likely paths to find the URW
	fonts.

2022-06-09  G. Branden Robinson <g.branden.robinson@gmail.com>
