@@ -1,3 +1,12 @@
+2022-06-10  Deri James  <deri@chuzzlewit.myzen.co.uk>
+
+	[gropdf]: Fix to gropdf.
+
+	* src/devices/gropdf/gropdf.pl: If pdfbookmark was called
+	within 5p of top of page (e.g. straight after a .bp when
+	\n[nl] was zero) the click destination would be off by a
+	page.
+
 2022-06-19  Ingo Schwarze <schwarze@openbsd.org>
 
 	* font/devpdf/devpdf.am: Always build PDF font description files.
